// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureList FeatureList::Group:On Toggle Click 1`] = `
Array [
  <p>
    General
  </p>,
  <div
    className="Grid"
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          CASE MANAGEMENT
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={true}
            className="form-check-input"
            disabled={false}
            id={11}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MAP TIMELINE
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={12}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          VIEWS AND BRIEFINGS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={13}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          NOTIFICATIONS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={14}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MASS COMMUNICATION
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={15}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          TRAFIC CAMERAS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={16}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Settings
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          AUDIT LOG
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={21}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="accordion-item"
    >
      <div
        className="AccordianTitle"
      >
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={true}
                className="form-check-input"
                disabled={false}
                id={22}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="toggle"
          onClick={[Function]}
        >
          <span
            className="DownCaret"
          />
        </div>
      </div>
      <div
        className="AccordionContent"
      >
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS - Add
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={true}
                className="form-check-input"
                disabled={false}
                id={221}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS - Edit
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={true}
                className="form-check-input"
                disabled={false}
                id={222}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS - Delete
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={true}
                className="form-check-input"
                disabled={false}
                id={223}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              Max USERS
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <select
              className="Select"
              onChange={[Function]}
              value={5}
            >
              <option
                value={5}
              >
                5
              </option>
              <option
                value={10}
              >
                10
              </option>
              <option
                value={20}
              >
                20
              </option>
              <option
                value={50}
              >
                50
              </option>
            </select>
            <div
              className="form-switch"
            >
              <input
                checked={true}
                className="form-check-input"
                disabled={false}
                id={224}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <p>
    Alerts
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERTS MANAGER
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={31}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERT RULES
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <select
          className="Select"
          onChange={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={50}
          >
            50
          </option>
        </select>
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={32}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FeatureList FeaureList Initialized 1`] = `
Array [
  <p>
    General
  </p>,
  <div
    className="Grid"
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          CASE MANAGEMENT
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={11}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MAP TIMELINE
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={12}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          VIEWS AND BRIEFINGS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={13}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          NOTIFICATIONS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={14}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MASS COMMUNICATION
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={15}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          TRAFIC CAMERAS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={16}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Settings
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          AUDIT LOG
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={21}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="accordion-item"
    >
      <div
        className="AccordianTitle"
      >
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={false}
                className="form-check-input"
                disabled={false}
                id={22}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="toggle"
          onClick={[Function]}
        >
          <span
            className="UpCaret"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Alerts
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERTS MANAGER
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={31}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERT RULES
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <select
          className="Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={50}
          >
            50
          </option>
        </select>
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={32}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FeatureList FeaureList: Value Change 1`] = `
Array [
  <p>
    General
  </p>,
  <div
    className="Grid"
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          CASE MANAGEMENT
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={true}
            className="form-check-input"
            disabled={false}
            id={11}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MAP TIMELINE
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={12}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          VIEWS AND BRIEFINGS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={13}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          NOTIFICATIONS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={14}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MASS COMMUNICATION
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={15}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          TRAFIC CAMERAS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={16}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Settings
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          AUDIT LOG
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={21}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="accordion-item"
    >
      <div
        className="AccordianTitle"
      >
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={false}
                className="form-check-input"
                disabled={false}
                id={22}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="toggle"
          onClick={[Function]}
        >
          <span
            className="UpCaret"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Alerts
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERTS MANAGER
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={31}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERT RULES
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <select
          className="Select"
          onChange={[Function]}
          value={5}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={50}
          >
            50
          </option>
        </select>
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={32}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`FeatureList FeaureList:Individual:On Toggle Click 1`] = `
Array [
  <p>
    General
  </p>,
  <div
    className="Grid"
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          CASE MANAGEMENT
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={true}
            className="form-check-input"
            disabled={false}
            id={11}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MAP TIMELINE
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={12}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          VIEWS AND BRIEFINGS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={13}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          NOTIFICATIONS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={14}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          MASS COMMUNICATION
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={15}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          TRAFIC CAMERAS
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={16}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Settings
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          AUDIT LOG
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={21}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="accordion-item"
    >
      <div
        className="AccordianTitle"
      >
        <div
          className="FeatureAccordionHeader"
        >
          <label>
            <span
              className="GreyBox"
            />
            <span>
              USERS
            </span>
          </label>
          <div
            className="ToggleWithMax"
          >
            <div
              className="form-switch"
            >
              <input
                checked={false}
                className="form-check-input"
                disabled={false}
                id={22}
                onChange={[Function]}
                type="checkbox"
              />
            </div>
          </div>
        </div>
        <div
          className="toggle"
          onClick={[Function]}
        >
          <span
            className="UpCaret"
          />
        </div>
      </div>
    </div>
  </div>,
  <p>
    Alerts
  </p>,
  <div
    className={null}
  >
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERTS MANAGER
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={31}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
    <div
      className="Feature"
    >
      <label>
        <span
          className="GreyBox"
        />
        <span>
          ALERT RULES
        </span>
      </label>
      <div
        className="ToggleWithMax"
      >
        <select
          className="Select"
          onChange={[Function]}
          value={10}
        >
          <option
            value={5}
          >
            5
          </option>
          <option
            value={10}
          >
            10
          </option>
          <option
            value={20}
          >
            20
          </option>
          <option
            value={50}
          >
            50
          </option>
        </select>
        <div
          className="form-switch"
        >
          <input
            checked={false}
            className="form-check-input"
            disabled={false}
            id={32}
            onChange={[Function]}
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
